# MoneyPulse

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CLAUDE-CODE-PROMPTS.md  CLAUDE.md  LICENSE  LOCAL_DEPLOYMENT.md  MONEYPULSE-PLAN.md  NAS-DEPLOYMENT-SPEC.md  PHASE1-SPEC.md  PHASE2-SPEC.md  PHASE3-SPEC.md  PHASE4-SPEC.md  PHASE5-SPEC.md  PHASE6-SPEC.md  PHASE7-SPEC.md  PHASE8-SPEC.md  README.md  deploy-to-nas.sh  docker-compose.dev.yml  docker-compose.yml  moneypulse-fullstack.code-workspace  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.claude/commands/: implement-slice.md  phase-orchestrate.md  review-work.md  rubber-duck.md  sync-deliver.md  tdd-slice.md
.github/: copilot-instructions.md
.github/agents/: mp-architect.agent.md  mp-implementor.agent.md  mp-lead.agent.md  (+6 more)
docs/: FIREBASE-SETUP-SECRETS-HANDOFF.md  home-assistant-notifications.md  ollama-on-mac.md
scripts/: deploy.sh  reset.sh  setup.sh  validate-ai-customizations.mjs
services/pdf-parser/: Dockerfile  pyproject.toml
services/pdf-parser/src/: main.py  models.py
services/pdf-parser/src/parsers/: ai_parser.py  boa_pdf.py  pdfplumber_parser.py
services/pdf-parser/src/tests/: fixtures.py  test_ai_parser.py  test_boa_pdf.py  test_pdfplumber_parser.py  test_routes.py
specs/: IMPLEMENTATION-PROMPTS.md  MONEYPULSE-PLAN.md  NAS-DEPLOYMENT-SPEC.md  PHASE1-SPEC.md  PHASE10-FEATURES-SPEC.md  PHASE3-SPEC.md  PHASE4-SPEC.md  PHASE9-SYNC-SPEC.md  SPEC-INDEX.md
(+319 files in other folders)
